--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
   "version": "1.0.0",
   "description": "A server to replicate demonware for Call of Duty 4",
   "main": "index.js",
+  "repository": "https://github.com/Demonware-Custom-Server/demonware-cod4",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon"
   },
   "author": "DelxHQ",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^14.14.37",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "@bwatton/logger": "^1.0.6"
+  }
 }
